# Upsilon-Workshop-Python-Client

./: README.md  pyproject.toml
upsilon_workshop_client/: __init__.py  __main__.py
upsilon_workshop_client/api/: __init__.py  project.py  search.py
upsilon_workshop_client/cli/: __init__.py  calculator.py  parse.py  parser.py  simulator.py  workshop.py
upsilon_workshop_client/commands/: __init__.py  base_command.py  clone.py  init.py  pull.py  push.py  search.py
upsilon_workshop_client/commands/calculator/: __init__.py  backup.py  base.py  upload.py
upsilon_workshop_client/utils/: __init__.py  clone.py  init.py  pull.py  push.py  search.py
upsilon_workshop_client/utils/calculator/: __init__.py  backup.py  upload.py
upsilon_workshop_client/utils/simulator/: __init__.py  run.py
